inou/prp/tests/errors/match_empty.prp
/*
:name: match_empty
:type: error
:error: match has no arms
*/
// A `match` must have at least one arm. `else` is optional (an exhaustive
// match needs none), but a match with zero arms is meaningless — it gets a
// clean syntax error rather than an opaque downstream "undriven result".
comb t(x:u2) -> (o:u8) {
  o = match x { }
}
